# live-voice-translation

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  test.ipynb
backend/: app.py  config.py  requirements.txt
backend/routes/: api.py
backend/services/: translation_service copy 2.py  translation_service.py
backend/socket_handlers/: handlers.py
backend/utils/: audio_utils.py
frontend/: app.js  index.html  style.css
